<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#2E7D32">

    <View
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/green_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="#8BC34A"
        android:paddingHorizontal="40dp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp">

        <ImageView
            android:id="@+id/secure_notes_icon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/secure_notes_icon_description"
            android:scaleType="fitCenter"
            android:layout_marginBottom="40dp" />

        <TextView
            android:id="@+id/text_choose_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scegli_un_pin"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="30dp">

            <EditText
                android:id="@+id/et_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Pin"
                android:inputType="numberPassword"
                android:background="@android:color/transparent"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null"
                android:textAlignment="center"
                android:maxLength="6" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="2dp"
                android:background="#000000"/>
        </LinearLayout>

        <TextView
            android:id="@+id/text_confirm_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conferma"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="50dp">

            <EditText
                android:id="@+id/et_pin_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:background="@android:color/transparent"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null"
                android:textAlignment="center"
                android:maxLength="6" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="2dp"
                android:background="#000000"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm_pin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/inizia"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/rounded_button_red"
            android:paddingVertical="12dp" />
    </LinearLayout>
</LinearLayout>
