<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#2E7D32">

    <View
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/green_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"  android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="#8BC34A" android:paddingTop="40dp"   android:paddingBottom="40dp">

    <ImageView
        android:id="@+id/secure_notes_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo" android:contentDescription="@string/secure_notes_icon_description"
        android:scaleType="fitCenter"
        android:layout_marginBottom="40dp"/>

        <TextView
            android:id="@+id/text_welcome_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/benvenuto_nin_securenotes"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginBottom="60dp"/>

        <TextView
            android:id="@+id/text_choose_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inserisci_pin"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp" />

        <!-- PIN EditText + black underline -->
        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_login_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Pin"
                android:background="@android:color/transparent"
                android:inputType="numberPassword"
                android:maxLength="6"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null" />

            <View
                android:id="@+id/under_bar"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="2dp"
                android:background="#000000" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login_pin"
            android:layout_width="250dp" android:layout_height="wrap_content"
            android:text="ACCEDI"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/rounded_button_red" android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginBottom="25dp"/>

    </LinearLayout>

</LinearLayout>